fixed alignment of header

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -66,6 +66,53 @@ p {
     line-height: 1.4;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+    padding-right: 11%;
+    padding-left: 5%;
+}
+
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-bottom: 3%;
+    width: 800px;
+    margin: 0 auto;
+
+
+}
+
+
+
+
+.firstRow {
+    display: flex;
+    padding-bottom: 2%;
+
+
+}
+
+.firstRowNav {
+    display: flex;
+    align-items: center;
+
+}
+.firstRowColumn2 {
+    display: flex;
+}
+
+
+
+.secondRow {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -82,7 +129,7 @@ p {
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
 }
 
 .middle-content {
